--- a/css/modal.css
+++ b/css/modal.css
@@ -54,13 +54,11 @@
     padding: 0.9rem 1rem;
     border: 1px solid #2c3e50;
     border-radius: 100rem;
-
-    color: #2c3e50;
-    background: transparent;
+    background-color: #2c3e50;
+    color: #ffffff;
     font-size: 0.8rem;
     font-family: inherit;
     letter-spacing: .2rem;
-
     transition: .2s;
     cursor: pointer;
 
