--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,13 @@ body {
   font-weight: 200;
   font-size: 14px;
   line-height: 100%;
+  text-shadow: 3px 1px 12px white;
   margin-bottom: 15px;
 }
 .header__title {
   font-weight: 600;
   font-size: 48px;
+  text-shadow: 3px 3px 12px #7b7b7b;
   margin: 0;
   line-height: 46px;
   margin-bottom: 11px;
@@ -56,6 +58,7 @@ body {
   margin: 0;
   font-weight: 400;
   font-size: 24px;
+  text-shadow: 3px 1px 12px white;
   line-height: 100%;
   padding-bottom: 75px;
 }
@@ -252,7 +255,7 @@ body {
   width: 100%;
 }
 .joing-perpective {
-  height: 100%;
+  height: 600px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -262,7 +265,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-image: url("./img/img_joing.png");
+  background-image: url("../img/img_joing.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -303,6 +306,10 @@ body {
   border-radius: 5px;
   border: none;
   background-color: white;
+
+  color: white;
+  background: #203041;
+  border-color: #2c3e50;
 }
 .joing-wrap__button:focus {
   outline: none;
@@ -500,9 +507,20 @@ body {
   min-height: 200px;
   padding: 2rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
+.application h3{
+  transform: translateY(-60px);
+}
+
+.application a{
+  margin: 0;
+  transform: translateY(-20px);
+}
+
 .application-wrap {
   padding: 19px 21px 30px;
   background: rgba(181, 232, 232, 0.4);
